--- a/views/test.html
+++ b/views/test.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../public/assets/css/burger_style.css" type="text/css" />
-    <title>Fill My Belly!!!</title>
+    <title>Get In My Belly!!!</title>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
     </script>
@@ -28,7 +28,7 @@
                 </div>
                 <div class="col-8 m-auto">
                     <h1>All the Delicious Burgers!!!</h1>
-                    <p>well...mostly</p>
+                    <p>well... mostly</p>
                 </div>
             </div>
         </div>
@@ -52,7 +52,7 @@
                     <div class="card mx-auto text-white bg-dark">
                         <div class="card-header">
                             <h4 class="text-center">
-                                Burgers in my Belly!
+                                Burgers In My Belly!
                             </h4>
                         </div>
                         <ul class="list-group list-group-flush">
@@ -68,10 +68,10 @@
                 </div>
                 <div class="card-body">
                     <form class="create-form">
-                        <div class="form-group">
-                            <label for="burgerName">Burger Name:</label>
-                            <input class="rounded" type="text" id="burgerName" name="name">
-                            <button type="submit" class="btn btn-warning float-right">Add Burger</button>
+                        <div class="form-group d-flex mb-0">
+                            <label class="align-self-center" for="burgerName">Burger Name:</label>
+                            <input class="rounded ml-1 align-self-center" type="text" id="burgerName" name="name">
+                            <button type="submit" class="btn btn-warning ml-auto">Add Burger</button>
                         </div>
                     </form>
                 </div>
