--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -5,3 +5,11 @@ body {
 footer {
     background-color: lightgray;
 }
+
+#availBurgers button {
+    color: darkred;
+}
+
+#eatenBurgers button {
+    color: darkmagenta;
+}
