--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,42 +2,42 @@
     <div class="jumbotron text-center bg-dark text-white">
         <div class="row mx-auto">
             <div class="col-4">
-                <img class="img-fluid rounded mx-auto" src="../public/assets/img/burger.jpg" style="width: 15rem">
+                <img class="img-fluid rounded mx-auto" src="/assets/img/burger.jpg" style="width: 15rem">
             </div>
             <div class="col-8 m-auto">
-                <h1>All the Delicious Burgers!!!</h1>
-                <p>well...mostly</p>
+                <h1 class="font-weight-bold">ALL THE DELICIOUS BURGERS!!!</h1>
+                <p>well... mostly</p>
             </div>
         </div>
     </div>
     <div class="row">
         <div class="col-6">
-            <div class="card mx-auto text-white bg-dark">
+            <div id="availBurgers" class="card mx-auto text-white bg-dark">
                 <div class="card-header">
                     <h4 class="text-center">
-                            Burgers Still Available to be DEVOURED!!!!
+                            Burgers Still Available To Be DEVOURED!!!!
                         </h4>
                 </div>
                 <ul class="list-group list-group-flush">
                     {{#each burgers}}
                         {{#unless devoured}}
-                            {{> burger-block devoured=true}}
+                            {{> burgers/burger-block devoured=true}}
                         {{/unless}}
                     {{/each}}
                 </ul>
             </div>
         </div>
         <div class="col-6">
-            <div class="card mx-auto text-white bg-dark">
+            <div id="eatenBurgers" class="card mx-auto text-white bg-dark">
                 <div class="card-header">
                     <h4 class="text-center">
-                                Burgers in my Belly!
+                                Burgers In My Belly!
                             </h4>
                 </div>
                 <ul class="list-group list-group-flush">
                     {{#each burgers}}
                         {{#if devoured}}
-                            {{> burger-block devoured=false}}
+                            {{> burgers/burger-block devoured=false}}
                         {{/if}}
                     {{/each}}
                 </ul>
@@ -45,14 +45,14 @@
         </div>
         <div class="card mx-auto my-5 text-white bg-dark">
             <div class="card-header">
-                <h2>Add a Yummy Burger to the Menu</h2>
+                <h2>Add A Yummy Burger To The Menu</h2>
             </div>
             <div class="card-body">
                 <form class="create-form">
-                    <div class="form-group">
-                        <label for="burgerName">Burger Name:</label>
-                        <input class="rounded" type="text" id="burgerName" name="name">
-                        <button type="submit" class="btn btn-warning float-right">Add Burger</button>
+                    <div class="form-group d-flex mb-0">
+                        <label class="align-self-center" for="burgerName">Burger Name:</label>
+                        <input class="rounded ml-1 align-self-center" type="text" id="burgerName" name="name">
+                        <button type="submit" class="btn btn-warning ml-auto">Add Burger</button>
                     </div>
                 </form>
             </div>
